--- a/login.html
+++ b/login.html
@@ -1,133 +1,101 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-  <title>BELLARIA - Login</title>
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-
-  <script src="scripts/jquery-3.4.1.min.js"></script>
-  <script>
-    $(function () {
-      $("#header").load("header.html", function () {
-        let navBar = document.getElementById("mainNav");
-        let headerDiv = document.getElementById("header");
-        let loginTab = document.getElementById("loginOrNew");
-
-        headerDiv.style.height = navBar.getBoundingClientRect().height + "px";
-
-        loginTab.classList.add("active");
-      });
-    });
-  </script>
+  <link href="css/style-login.css" rel="stylesheet" />
 </head>
 
-<body>
-  <div id="header"></div>
-
-  <link href="css/style-login.css" rel="stylesheet" />
-
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card card-signin my-5">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+      <div class="card card-signin my-5">
+        <div class="auth_card">
           <div class="card-body">
             <h5 class="card-title text-center">Login</h5>
-            <form id="form" class="form-signin">
+            <form id="loginForm" class="form-signin">
               <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required
-                  autofocus />
+                <input
+                  type="email"
+                  id="inputEmail"
+                  class="form-control"
+                  placeholder="Email address"
+                  required
+                  autofocus
+                />
                 <label for="inputEmail">Email address</label>
               </div>
 
               <div class="form-label-group">
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required />
+                <input
+                  type="password"
+                  id="inputPassword"
+                  class="form-control"
+                  placeholder="Password"
+                  required
+                />
                 <label for="inputPassword">Password</label>
               </div>
-
-              <div class="custom-control custom-checkbox mb-3">
-                <input type="checkbox" class="custom-control-input" id="customCheck1" />
-                <label class="custom-control-label" for="customCheck1">Remember password</label>
-              </div>
-              <button id="loginBtn" style="background-color: #433535eb"
-                class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">
+              <br><br>              
+              <button
+                id="loginBtn"
+                style="background-color: #433535eb;"
+                class="btn btn-lg btn-primary btn-block text-uppercase"
+                type="submit"
+              >
                 Login
               </button>
-              <button id="signUpBtn" style="background-color: #433535eb"
-                class="btn btn-lg btn-primary btn-block text-uppercase">
+              <button
+                id="signUpBtn"
+                style="background-color: #433535eb;"
+                class="btn btn-lg btn-primary btn-block text-uppercase"
+              >
                 Don't have an account? Sign Up Now!
               </button>
-
             </form>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <script>
-    let form = document.getElementById("form");
-    let signUpBtn = document.getElementById("signUpBtn");
+<script>
+  $("#signUpBtn").click((event) => {
+    event.preventDefault();
+    showRegisterDialog();
+  });
 
-    signUpBtn.addEventListener("click", event => {
-      event.preventDefault();
-    });
+  $("#loginForm").submit((event) => {
+    event.preventDefault();
 
-    form.addEventListener("submit", event => {
-      event.preventDefault();
+    let data = {
+      email: $("#inputEmail").val(),
+      pass: $("#inputPassword").val(),
+      from: "login",
+    };
 
-      let data = {
-        email: $("#inputEmail").val(),
-        pass: $("#inputPassword").val(),
-        from: "login"
-      }
+    $.ajax({
+      type: "POST",
+      url: "./includes/auth.php",
+      data: data,
+      dataType: "JSON",
+      success: function (response) {
+        if (response.result === "success") {
+          let msg = response.message.split("~_~");
 
-      $.ajax({
-        type: "POST",
-        url: './includes/auth.php',
-        data: data,
-        dataType: 'JSON',
-        success: function (response) {
-          if (response.result === "success") {
-            window.localStorage.setItem("email", $("#inputEmail").val());
-            window.localStorage.setItem("pass", $("#inputPassword").val());
+          setCookie("email", $("#inputEmail").val());
+          setCookie("id", msg[0]);
+          setCookie("name", msg[1]);
+          setCookie("isAdmin", msg[2]);
 
-            let msg = (response.message).split("~_~");
-
-            window.localStorage.setItem("id", msg[0])
-            window.localStorage.setItem("name", msg[1]);
-            window.localStorage.setItem("isAdmin", msg[2]);
-
-            if (msg[2] == "false") {
-              window.location.replace("index.html");
-            } else {
-              window.location.replace("admin.html");
-            }
-
-          } else if (response.result === "failure") {
-            console.log(response.message);
-          }
-        }, error: function () {
-          console.log("Some Error Occurred!");
+          closeForm();
+          updateHeader();
+        } else if (response.result === "failure") {
+          console.log(response.message);
+          alert("Some error occurred!");
         }
-      });
-
-
+      },
+      error: function (jqXhr) {
+        console.log(jqXhr.responseText);
+        alert("User does not exist!");
+      },
     });
-
-    signUpBtn.addEventListener("click", event => {
-      location.href = "sign-up.html";
-    });
-
-  </script>
-</body>
-
-</html>
+  });
+</script>
